# aippt-agent

./: README.md  aippt_agent.py  aippt_agent_v2.py  aippt_agent_v3.py  aippt_agent_v5.py  aippt_agent_v6.py  aippt_agent_v6_2_no_visualization.py  pyproject.toml  run_log.txt  run_log_v3_ok.txt  run_log_v5.py  run_log_v6_2.txt  run_log_v6_2_no_vis.txt  run_log_v6_ok.txt
