[tool.poetry]
name = "aippt-agent"
version = "0.1.0"
description = ""
authors = ["stevechan <chanshunli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
autogen = "^0.3.2"
python-pptx = "^1.0.2"
requests = "^2.32.3"
langfuse = "^2.53.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
